--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Summary</h1>
-    <img src="./html_projects_learning/4.3 HTML Porfolio Project/assets/images/birthday-invite.png" height="100" width="100" alt="">
+    <img src="./assets/images/birthday-invite.png" height="100" width="100" alt="">
     <h3><p>Hey I am Parth looking for a job as a Front End Developer</p></h3>
     <h2>Education</h2>
     <ul>
@@ -18,7 +18,7 @@
         <li>Front End Web Developer</li>
         <li>UI/UX Designer</li>
     </ul>
-    <a href="./html_projects_learning/4.3 HTML Porfolio Project/public/about.html">about me</a>
+    <a href="./public/about.html">about me</a>
     <footer>
         <style>footer {
             text-align:center;
